samples/_failures_safe/1761194477_4870e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4634db9.c: In function ‘main’:
./samples/SAFE/__tmp_d4634db9.c:155:23: error: missing terminating " character
  155 |     b.rows = read_int("Enter rows for
      |                       ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4634db9.c:155:5: error: expected expression at end of input
  155 |     b.rows = read_int("Enter rows for
      |     ^
./samples/SAFE/__tmp_d4634db9.c:155:14: error: too few arguments to function ‘read_int’
  155 |     b.rows = read_int("Enter rows for
      |              ^~~~~~~~
./samples/SAFE/__tmp_d4634db9.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d4634db9.c:155:5: error: expected declaration or statement at end of input
  155 |     b.rows = read_int("Enter rows for
      |     ^
